// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextContent renders with defaultProps 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-large ax-context-content--padding-vertical-large"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": undefined,
        "maxHeight": undefined,
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ContextContent renders with hasFullSeparator renders with the full-separator element modifier 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-large ax-context-content--padding-vertical-large ax-context-content--full-separator"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": undefined,
        "maxHeight": undefined,
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ContextContent renders with height inserts an inline height style attribute 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-large ax-context-content--padding-vertical-large ax-context-content--scrollable"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": "5rem",
        "maxHeight": undefined,
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ContextContent renders with maxHeight inserts an inline maxHeight style attribute 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-large ax-context-content--padding-vertical-large ax-context-content--scrollable"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": undefined,
        "maxHeight": "5rem",
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ContextContent renders with padding large 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-large ax-context-content--padding-vertical-large"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": undefined,
        "maxHeight": undefined,
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ContextContent renders with padding none 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-none ax-context-content--padding-vertical-none"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": undefined,
        "maxHeight": undefined,
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ContextContent renders with padding small 1`] = `
<div
  className="ax-context-content ax-context-content--padding-horizontal-small ax-context-content--padding-vertical-small"
>
  <div
    className="ax-context-content__scroll"
    style={
      Object {
        "height": undefined,
        "maxHeight": undefined,
      }
    }
  >
    Lorem ipsum
  </div>
</div>
`;
